# liscribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.json  install.sh  pyproject.toml  requirements.txt  uninstall.sh
docs/: WORKFLOWS.md  architecture.md  dictation-setup.md  navigation.mmd  plan-v2.md  review-diff.md  reviewer.md  security-review.md  v2-rubric.md
src/liscribe/: __init__.py  app.py  app_instance.py  cli.py  config.py  dictation.py  dictation_launchd.py  menubar.py  output.py  overlay.py  path_display.py  platform_setup.py  power.py  rec.css  recorder.py  replacements.py  shell_alias.py  transcribe_worker.py  transcriber.py  webhook.py
src/liscribe/bridge/: dictate_bridge.py  onboarding_bridge.py  scribe_bridge.py  settings_bridge.py  transcribe_bridge.py
src/liscribe/controllers/: dictate_controller.py  onboarding_controller.py  scribe_controller.py  transcribe_controller.py
src/liscribe/screens/: __init__.py  base.py  help_screen.py  home.py  modals.py  preferences.py  prefs_dependencies.py  prefs_dictation.py  prefs_general.py  prefs_microphone.py  prefs_save_location.py  prefs_transcripts.py  prefs_whisper.py  recording.py  top_bar.py  transcribing.py  transcripts.py
tests/: test_config_service.py  test_dictation_launchd.py  test_model_service.py  test_onboarding_bridge.py  test_onboarding_controller.py  test_output.py  test_power.py  test_replacements.py  test_scribe_bridge.py  test_scribe_controller.py  test_settings_bridge.py  test_shell_alias.py  test_transcribe_bridge.py  test_transcribe_controller.py
(+12 files in other folders)
