[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liscribe"
version = "0.6.0"
description = "100% offline terminal audio recorder and transcriber for macOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0,<2.0.0",
    "textual>=0.80.0",
    "click>=8.1.0",
    "pyperclip>=1.9.0",
    "PyYAML>=6.0.2",
    "rich>=13.0",
    "pyfiglet>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rec = "liscribe.cli:main_wrapper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
