[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liscribe"
version = "2.0.0"
description = "100% offline Mac audio recorder and transcriber"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}

dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0,<2.0.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
